# ubus_test_server

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  server
include/: ubus_server.h
src/: server.c  ubus_server.c
